Add nav-bar markup

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
 </head>
 
 <body>
-
+    <nav class="nav-bar">
+        <div class="nav-left">
+            <div>GithubLogo-Charbytesdev</div>
+            <div>Library</div>
+        </div>
+        <div class="nav-right">
+            <div>Welcome</div>
+    </nav>
 </body>
 
 </html>
