Implement bookcard to show books on screen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <div class="nav-right">
             <div>Welcome</div>
     </nav>
+    <div>
+        <div class=".card"></div>
+    </div>
+    <div class="grid-container" id="book-card-container">
+
+
+
+    </div>
 </body>
 
 </html>
