--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
         <div class="nav-right">
             <div>Welcome</div>
     </nav>
-    <div>
-        <div class=".card"></div>
-    </div>
     <div class="grid-container" id="book-card-container">
 
 
 
     </div>
+    <input type="checkbox">
 </body>
 
 </html>
