--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
         <div class="nav-right">
             <div>Welcome</div>
     </nav>
+    <button id="add-book-button">Add book</button>
     <div class="grid-container" id="book-card-container">
+    </div>
+
+
+    <dialog id="new-book-dialog">
+        <form id="new-book-form">
+            <h2>Add new book</h2>
+            <label for="form-title">Title</label>
+            <input type="text" id="form-title" placeholder="Title">
+            <label for="form-author">Author</label>
+
+            <input type="text" id="form-author" placeholder="Author">
+            <label for="form-page-count">Page Count</label>
+
+            <input type="number" id="form-page-count" placeholder="Page Count">
+            <label for="form-done-reading">Did you read it?</label>
+            <input type="checkbox" id="form-done-reading">
+            <button formmethod="dialog">cancel</button>
+            <button formmethod="dialog" id="confirm-button" value="default">Confirm</button>
+
+        </form>
+    </dialog>
 
 
 
